network_policies/egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-dns
  namespace: guestbook
spec:
  podSelector: {}
  egress:
    # block all egress
    - to:
        - podSelector: {}
    # allow dns to openshift dns-default
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
  policyTypes:
  - Egress
