network_policies/guestbook-frontend-to-redis-follower.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: guestbook-frontend-to-redis-follower-ingress
  namespace: guestbook-redis
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: guestbook-frontend
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: guestbook
  - ports:
    - protocol: TCP
      port: 6379
  podSelector:
    matchLabels:
      app: redis-follower
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: guestbook-frontend-to-redis-follower-egress
  namespace: guestbook
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis-follower
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: guestbook-redis
  - ports:
    - protocol: TCP
      port: 6379
  podSelector:
    matchLabels:
      app: guestbook-frontend
  policyTypes:
  - Egress
