network_policies/route-to-guestbook-frontend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: route-to-guestbook-frontend
  namespace: guestbook
spec:
  podSelector:
    matchLabels:
      app: guestbook-frontend
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
