network_policies/route-to-redis-metrics.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: route-to-redis-leader-metrics
  namespace: guestbook-redis
spec:
  podSelector:
    matchLabels:
      app: redis-leader
  ingress:
  - ports:
    - protocol: TCP
      port: 9121
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: route-to-redis-follower-metrics
  namespace: guestbook-redis
spec:
  podSelector:
    matchLabels:
      app: redis-follower
  ingress:
  - ports:
    - protocol: TCP
      port: 9121
